# heartbeat

./: .dockerignore  .eslintrc  .gitattributes  .gitignore  .prettierrc  .stylelintrc.yml  Cargo.toml  Cross.toml  Dockerfile  Justfile  LICENSE  README.md  Rocket.toml  build.rs  clippy.toml  config.example.toml  docker-bake.hcl  docker-compose.yml  docs  eslint.config.mjs  install.sh  nightly-rustfmt.toml  package-lock.json  package.json  rustfmt.toml  sqlx-data.json  tsconfig.json
.github/workflows/: binaries.yml  docker.yml  docker_push.sh  lint.yml  pages.yml  release.yml
.sqlx/: query-0015547a976f70beb5a26d886dfa4cf39fb283b2e9c1deafe1a1d9ad1ccfc641.json  query-093b363e11c98753db4dc590918cfd53695693dcd116462965906a1d7b92b70d.json  query-1b45a0b819bdd1e8d39b9e94de9efc8f296d2b46bb854fffea40df537c23b008.json  query-377f61071d2ca8c0927d9958301fe80ae1f7a22b3f3169648d8ff78c8317e53e.json  query-3ae80c2766dd15b5bb1fecde5afb3baeb320e72eca1214dcd57b2394d0a49db3.json  query-500c5b1b7765948c6f622e11556416dd37b23dc9fd8d21e870c4aff69b0258cf.json  query-50d4216bfb092f9db51fa07059dc08cc351da3884e3cf3f6c4d7388045f5c6dc.json  query-5671c60a006bda6529f94b40842431fb8daa66c4eb390b278e1377145f168d2f.json  query-6dfa82eff981a71d7a6f496dba5699b6712e3d901e0b1f5448d5631d42e54979.json  query-71cee5f254ef5472d9066555c51b32c3adb3241e2401519f693e3a0349c3ba06.json  query-8ef5c55338ef7edf48f396e2d21261cbf16d54ab046dd6fb97a70f8d3b84ea6d.json  query-91c59ecbc9579b4f2bb6df7dfcaff68a4fead30edb444ece96be2ec70e536393.json  query-9bfb8c9ba6021935e3f316243358baaa4690a0979ccdbafe5655cfae365512cf.json  query-9f7d92aa600835acd2c1454e4f1ab8e8742cf24d72ae6a3b5b73b78eca4421b3.json  query-a5847c47b796444696919370dca85bf1947c961d936b7236a867aeeffd88c02a.json  query-a947da46b89572cc4a08d6d62fb1908782b1c36978373f7514a04278bbf6030d.json  query-b1f9b9fbfd3ba3a21fb067b82195e5a7b3e1c8d0e2d3623460b841ceb3c3fcbf.json  query-b391443664741aabbdb2121ae4f0b1e7e4327e6a5f004287bc9bb55bdfebe638.json  query-b4aae7e48a3b5b2a0bea28e06bc8a0aaafe9feb90faf3055f0b3d4c31d2b3bbf.json  query-bdc2fae028ae62504f3ef216f38ecfc1337f5412931776efc8cc78683fad5b8b.json  query-c46c8a6d578ab3b81b617c27b07ef6d863ac25e35892ffa5707c503032fcf02c.json  query-d56ae0c625da59ac6d7931f9c4e109c7b28e9e07025a0367c4e0850964569472.json  query-daed9b97662303882ac2bfe12b870a850f32aa91012b8bd153cc3dce7429bffe.json  query-e7a5b16c1609871f7f8e356a604a581aa1e63da09c05251b022f9ce43b3ee090.json  query-e9275b33433dd4ec9a2e028468315f8e712ed5ab48496925bdf816981b709a01.json  query-f52c55508a57e6f79d8be76ec74f214f33b522eef1676fd0dd1834dd013df7cb.json
book/: book.toml
book/src/: SUMMARY.md  configuration.md  index.md  troubleshooting.md
book/src/clients/: api.md  index.md
book/src/getting-started/: index.md  installation.md  running.md
conf/: Caddyfile  nginx.conf
docker-entrypoint-initdb.d/: init.sql
docs/: 404.html  client.md  configuration.html  index.html  print.html  searchindex.js  searchindex.json  server.md  toc.html  toc.js  troubleshooting.html  usage.md
docs/clients/: api.html  index.html
docs/getting-started/: index.html  installation.html  running.html
lib/axum-realip/: Cargo.toml
lib/axum-realip/src/: headers.rs  lib.rs  local.rs  rejection.rs  rfc7239.rs
lib/erased-debug/: Cargo.toml  README.md
lib/erased-debug/src/: lib.rs
lib/heartbeat-sys/: Cargo.toml  clippy.toml  rustfmt.toml
lib/heartbeat-sys/src/: build.rs  lib.rs
lib/heartbeat-sys/src/cli/: common.rs  log.rs  mod.rs
lib/heartbeat-sys/src/fs/: errors.rs  mod.rs  unix.rs  windows.rs
lib/heartbeat-sys/src/home/: mod.rs  windows.rs
lib/heartbeat-sys/src/process/: io.rs  mod.rs  terminal.rs
lib/heartbeat-sys/src/utils/: mod.rs  raw.rs  tty.rs  utils.rs
lib/html-rs/: Cargo.toml  Justfile  LICENSE
lib/html-rs/html/: Cargo.toml
lib/html-rs/html/src/: escape.rs  lib.rs
lib/html-rs/html/tests/: absolute_paths.rs  basic_syntax.rs  control_structures.rs  misc.rs  splices.rs
lib/html-rs/html/tests/warnings/: attribute-missing-value.rs  class-shorthand-missing-value.rs  keyword-without-at.rs  non-closed-element.rs  non-string-literal.rs  void-element-slash.rs  void-element-slash.stderr
lib/html-rs/html_macros/: Cargo.toml
lib/html-rs/html_macros/src/: ast.rs  escape.rs  generate.rs  lib.rs  parse.rs
lib/unsafe_formatting/: Cargo.toml  LICENSE-MIT
lib/unsafe_formatting/src/: buffer.rs  lib.rs  macros.rs
migrations/: 20230103063306_initial_migration.sql  20230731182724_better_stats_lookup.sql  20230731182724_initial_migration.sql  20230909130500_create_schema.sql
src/: auth.rs  config.rs  devices.rs  error.rs  guards.rs  lib.rs  main.rs  models.rs  sealed.rs  server.rs  stats.rs  templates.rs  traits.rs
src/routes/: api.rs  assets.rs  badge.rs  badges.rs  mod.rs  pages.rs  query.rs  shutdown.rs
src/templates/: mod.rs  script.mjs
src/util/: formats.rs  hf_time.rs  mod.rs  plural.rs  serde.rs  serializers.rs  snowflake.rs  tera.rs  token.rs  webhook.rs
src/util/badge/: colour.rs  font.rs  mod.rs  renderer.rs  vendor.rs  xml.rs
static/: grids.min.css  script.mjs  style.css
tasker/: Display_State_On.prf.xml  Display_Unlocked.prf.xml  Heartbeat.prf.xml  Lock_Screen.prf.xml
tasker/__gen/: Heartbeat.prf.xml  generate.sh
templates/: base.html.tera  error.html.tera  index.html.tera  privacy.html.tera  stats.html.tera
www/: index.html  install.sh  style.css
