[package]
name = "heartbeat"
version = "0.1.0"
description = "A service to keep a live heartbeat on multiple devices"
edition = "2021"
license = "MPL-2.0"
authors = ["Isis <root@5ht2.me>"]
repository = "https://github.com/lmaotrigine/heartbeat"
homepage = "https://hb.5ht2.me"
publish = false
default-run = "heartbeat"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros", "tokio", "ws"] }
axum-realip = { git = "https://git.5ht2.me/lmaotrigine/axum-realip", version = "0.1.0" }
badges = { git = "https://github.com/lmaotrigine/badges", version = "0.1.0", optional = true }
base64ct = "1"
chrono = { version = "0.4", features = ["serde", "std", "clock"], default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "env", "help", "std", "usage"] }
color-eyre = "0.6"
html = { git = "https://git.5ht2.me/lmaotrigine/html-rs", version = "0.1.0", features = ["axum"] }
parking_lot = "0.12"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"], optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["chrono", "macros", "postgres", "runtime-tokio"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["badges", "webhook"]
badges = ["dep:badges"]
webhook = ["reqwest"]
migrate = ["sqlx/migrate"]
sqlx-tls = ["sqlx/tls-rustls"]

[[bin]]
name = "migrate_db"
required-features = ["migrate"]

[[bin]]
name = "heartbeat"
path = "src/bin/web.rs"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
