[package]
name = "heartbeat"
version = "0.0.2"
description = "A service to keep a live heartbeat on multiple devices"
edition = "2021"
license = "MPL-2.0"
authors = ["Isis <root@5ht2.me>"]
repository = "https://github.com/lmaotrigine/heartbeat"
homepage = "https://hb.5ht2.me"
publish = false
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros", "tokio", "ws"] }
axum-realip = { git = "https://git.5ht2.me/lmaotrigine/axum-realip", version = "0.1.0" }
badges = { git = "https://github.com/lmaotrigine/badges", version = "0.1.0", optional = true }
base64ct = "1"
chrono = { version = "0.4", features = ["serde", "std", "clock"], default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "env", "error-context", "help", "std", "usage", "wrap_help"] }
color-eyre = "0.6"
erased-debug = { git = "https://git.5ht2.me/lmaotrigine/erased-debug", version = "0.1.0", features = ["serde"] }
heartbeat-sys = { git = "https://git.5ht2.me/lmaotrigine/heartbeat-sys", version = "0.1.0" }
html = { git = "https://git.5ht2.me/lmaotrigine/html-rs", version = "0.1.0", features = ["axum"] }
itoa = "1"
mime_guess = { version = "2.0.4", default-features = false }
parking_lot = "0.12"
percent-encoding = { version = "2.3.0", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
reqwest = { version = "0.11", features = ["json"], optional = true, default-features = false }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["chrono", "macros", "postgres", "runtime-tokio"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
unsafe_formatting = { git = "https://git.5ht2.me/lmaotrigine/unsafe_formatting", version = "0.1.0" }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
jemallocator = "0.5"

[build-dependencies]
heartbeat-sys = { git = "https://git.5ht2.me/lmaotrigine/heartbeat-sys", version = "0.1.0" }

[features]
default = ["badges", "webhook", "tls-rustls"]
tls-rustls = ["reqwest/rustls-tls-webpki-roots"]
tls-native = ["reqwest/native-tls"]
tls-native-vendored = ["reqwest/native-tls-vendored"]
badges = ["dep:badges"]
webhook = ["reqwest"]
migrate = ["sqlx/migrate"]
sqlx-tls = ["sqlx-tls-rustls"]
sqlx-tls-rustls = ["sqlx/tls-rustls"]
sqlx-tls-native = ["sqlx/tls-native-tls"]

[profile.release]
panic = "abort"
strip = true
opt-level = 2
lto = true

[profile.micro]
inherits = "release"
opt-level = "z"
