[package]
name = "html"
version = "0.1.0"
edition = "2021"
authors = ["Isis <root@5ht2.me>"]
license = "MPL-2.0"
#publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-dep = { package = "actix-web", version = "4.3.1", default-features = false, optional = true }
axum-core = { version = "0.4", optional = true }
futures-util = { version = "0.3.28", default-features = false, optional = true }
html_macros = { version = "0.1.0", path = "../html_macros" }
http = { version = "1", optional = true }
itoa = "1.0.6"
rocket = { version = ">=0.3,<0.5", optional = true }
tide = { version = "0.16.0", default-features = false, optional = true }

[features]
default = ["axum"]
actix-web = ["actix-web-dep", "futures-util"]
axum = ["axum-core", "http"]

[dev-dependencies]
trybuild = "1.0.80"
