[package]
name = "html_macros"
version = "0.1.0"
edition = "2021"
authors = ["Isis <root@5ht2.me>"]
license = "MPL-2.0"
#publish.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "1"

[lib]
name = "html_macros"
proc-macro = true
